# pwmp-server

./: .dockerignore  .gitignore  CHANGELOG_V1.md  Cargo.toml  Cross.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: docker_build.yml  release.yml  verify_commits.yml
.sqlx/: query-1ce9f3046bc6ca76d38ef5a3544a06627fbaa7b38b40e050549b72beaf516683.json  query-3153eeddaf18955ebd58bd1e8df8b8e835c24b2eacd2215168a795b1d6a7d6ca.json  query-3c4e72710bfab5b809c08129b01b2ccac71ad621d8bed93a18d3a5060a678e80.json  query-3f6363ea0fe2a8a02aaa1eea45c509a72d1e1163d502ac009c1d700721a6b57a.json  query-4af98b4f6de8d480c555fa5ae7398172a6a0652516002e58da06d5bf5be0633a.json  query-513da2a308934da94712436e136472c9fef438e9a5c3a07e8031cba4b18869ae.json  query-6259e187dedd9aa4d3b01706a9cf8a75345dcc7e63d325b5a26b7d1aaa274c6e.json  query-6c8fb4028d6bc537e7c42504730a48b90a0c7f1771893b944127ad02fba3ec00.json  query-7b5fb578fcf6ce6c00553ad0baccaae09dc1f6be1ffc0fb2891739168e585d75.json  query-936072b2aa0519b17ee7e2ce318f6701ebb3d65ea539c6c8820643ae28e185b6.json  query-a45d81871dafcfe91a9ed3a0a1cf7b9719f6b3659b6b5b093659fe84e2372a5b.json  query-ab3c39bc87c5a5bf88ea2668b7ff82d22ba66b04bb7d4f97860d08d473fb1a25.json  query-b9b5b8fd482bf33c1945cc92c74a0f001ca401d7d872aeb309c5c0994de6c1d0.json  query-d84a4b77af90930407ced265f441ebbde63a899d43f73c7fc665b0f07c2af485.json  query-de42a26e34cf8972379018b560c8e5fc7cf14fce0b0d28bc3b04c80a5712a3b1.json  query-df550debd7535a5748681d00940565c0cef818ce726f9a919de3d7ecbeb4d53d.json  query-ecff0d906d46773120d98082e84ea606e92057066d1b90141689b9872964758b.json  query-f5ce2b64bc88e9919f04555665ee977789cce33b625e180ea94316801bc8b425.json
migrations/: 20241217192210_create_devices_table.sql  20241217193005_create_measurements_table.sql  20241217193040_create_statistics_table.sql  20241217193101_create_settings_table.sql  20241217193123_create_notifications_table.sql  20241217193140_create_firmwares_table.sql  20241217193159_create_firmware_stats_table.sql
queries/: erase_database_content.sql  erase_database_content_keep_devices.sql  erase_database_content_keep_devices_and_settings.sql  erase_database_keep_devices.sql  get_os_update.sql  set_timezone.sql
queries/postgres/: drop_migrations_table.sql  erase_database.sql  erase_database_content.sql  erase_database_content_keep_devices_and_settings.sql  get_device_settings.sql  get_firmwares.sql  get_last_update_event.sql  get_node_measurements.sql  get_os_update.sql  get_tz_names.sql  migrate.sql  post_measurements.sql  push_firmware.sql  send_os_update_event.sql  update_os_update_event.sql
queries/sqlite/: create_notification.sql  erase_database.sql  erase_database_content.sql  erase_database_content_keep_devices_and_settings.sql  get_device_by_mac.sql  get_device_settings.sql  get_devices.sql  get_firmwares.sql  get_last_update_event.sql  get_node_measurements.sql  get_os_update.sql  migrate.sql  post_measurements.sql  post_results.sql  post_stats.sql  push_firmware.sql  send_os_update_event.sql  update_os_update_event.sql
src/: cli.rs  config.rs  error.rs  logging.rs  main.rs
src/dbmgr/: mod.rs
src/otautil/: mod.rs
src/server/: client.rs  client_handle.rs  config.rs  db.rs  db.rs.bak  handle.rs  mod.rs  rate_limit.rs  rngbuf.rs  signal.rs  tz.rs
src/server/database/: mod.rs  postgres.rs  sqlite.rs
src/server/db/: mod.rs  postgres.rs  sqlite.rs
src/server/db/backends/: mod.rs  postgres.rs  sqlite.rs
src/server/notification_client/: hassnotify.rs  mod.rs  pushsafer.rs
src/svcmgr/: mod.rs  openrc.rs  systemd.rs  traits.rs
src/svcmgr/templates/: openrc  systemd.service
src/tester/: mod.rs
src/webapi/: mod.rs
src/webapi/routes/: devices.rs  index_impl.rs  measurements.rs  mod.rs
