[package]
name = "pwmp-server"
version = "2.3.0"
edition = "2024"
authors = ["Fábián Varga <23280129+br0kenpixel@users.noreply.github.com>"]
description = "The PixelWeather Messaging Protocol server."
rust-version = "1.93"
homepage = "https://github.com/PixelWeatherProject"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/PixelWeatherProject/pwmp-server"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
sqlx = { version = "0.8.6", default-features = false, features = [
    "postgres",
    "runtime-tokio",
    "sqlite",
    "macros",
    "tls-rustls",
] }
actix-web = { version = "4.13.0", default-features = false, features = [
    "http2",
    "macros",
    "unicode",
    "compat",
] }
tokio = { version = "1.50.0", default-features = false, features = [
    "rt-multi-thread",
    "macros",
    "socket2",
    "signal",
] }
confy = { version = "2.0.0", default-features = false, features = [
    "yaml_conf",
] }
pwmp-client = { git = "https://github.com/PixelWeatherProject/pwmp-client.git", tag = "v2.2.2" }
time = { version = "0.3.47", default-features = false, features = ["macros"] }
homedir = { version = "0.3.6", default-features = false }
whoami = { version = "2.1.1", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
clap = { version = "4.5.60", features = ["derive"] }
socket2 = { version = "0.6.3", features = ["all"] }
tracing-subscriber = "0.3.22"
iana-time-zone = "0.1.65"
circular-queue = "0.2.7"
serde_json = "1.0.149"
color-print = "0.3.7"
serde_with = "3.17.0"
thiserror = "2.0.18"
semaphore = "0.4.0"
tracing = "0.1.44"
chrono = "0.4.44"
regex = "1.12.3"
