[package]
name = "pwmp-server"
version = "2.3.1"
edition = "2024"
authors = ["Fábián Varga <23280129+br0kenpixel@users.noreply.github.com>"]
description = "The PixelWeather Messaging Protocol server."
rust-version = "1.93"
homepage = "https://github.com/PixelWeatherProject"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/PixelWeatherProject/pwmp-server"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
opt-level = 3

[dependencies]
pwmp-client = { git = "https://github.com/PixelWeatherProject/pwmp-client.git", tag = "v2.2.4" }
time = { version = "0.3.47", default-features = false, features = ["macros"] }
sqlx = { version = "0.8.6", default-features = false, features = [
    "postgres",
    "runtime-tokio",
    "sqlite",
    "tls-rustls",
] }
tokio = { version = "1.51.1", default-features = false, features = [
    "rt-multi-thread",
    "macros",
    "socket2",
    "signal",
] }
confy = { version = "2.0.0", default-features = false, features = [
    "yaml_conf",
] }
homedir = { version = "0.3.6", default-features = false }
whoami = { version = "2.1.2", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
clap = { version = "4.6.1", features = ["derive"] }
socket2 = { version = "0.6.3", features = ["all"] }
tracing-subscriber = "0.3.23"
circular-queue = "0.2.7"
serde_json = "1.0.149"
serde_with = "3.18.0"
thiserror = "2.0.18"
semaphore = "0.4.0"
tracing = "0.1.44"
chrono = "0.4.44"
regex = "1.12.3"
